# Zoom_App

products_service/: alembic.ini  pyproject.toml
products_service/alembic/: env.py
products_service/alembic/versions/: 4146abfa684f_update_database.py  48065be3241d_initial_migration.py  93c19b54d8b3_created_datetime_fields_on_basemodel.py  abbdadc32ba7_update_models.py  c2da72df36e0_fixing_last_migration.py
products_service/src/: main.py
products_service/src/contracts/ProductCategoryContracts/: CreateProductCategory.py
products_service/src/contracts/ProductContracts/: CreateProductRequest.py
products_service/src/domain/entities/: BaseEntity.py  Product.py  Service.py
products_service/src/domain_services/: DependencyInjectionContainer.py
products_service/src/domain_services/Abstracts/Product/: AbstractCreateProductCommand.py  AbstractGetProductCommand.py  AbstractListProductsCommand.py  AbstractProductRepository.py
products_service/src/domain_services/Abstracts/ProductCategory/: AbstractCreateProductCategoryCommand.py  AbstractGetProductCategoryCommand.py  AbstractListProductCategoryCommand.py  AbstractProductCategoryRepository.py
products_service/src/domain_services/commands/Product/: CreateProductCommand.py  GetProductCommand.py  ListProductsCommand.py
products_service/src/domain_services/commands/ProductCategory/: CreateProductCategoryCommand.py  GetProductCategoryCommand.py  ListProductCategoryCommand.py
products_service/src/infra/: DependencyInjectionContainer.py
products_service/src/presentation/controllers/: product_controller.py
(+6 files in other folders)
