[tool.poetry]
name = "products-service"
version = "0.1.0"
description = ""
authors = ["eduardoyanoliveira <63554709+eduardoyanoliveira@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "products_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
sqlalchemy = {extras = ["postgresql"], version = "^2.0.18"}
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
